[tool.poetry]
name = "repl_python3_Minecraft-Server-Scanner"
version = "0.1.0"
description = ""
authors = ["FlareStormGamin <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
mcstatus = "^9.0.3"
pythonping = "^1.1.1"
termcolor = "^1.1.0"
colorama = "^0.4.4"
tqdm = "^4.63.1"
ipython = "^8.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
